--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --quiet index.js test.js"
   },
   "dependencies": {
     "chai": "^4.2.0",
@@ -14,5 +15,10 @@
     "mocha": "^5.2.0",
     "pixelmatch": "^4.0.2",
     "puppeteer": "^1.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
