change screenshot to full page and wait for images to load completely

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prestart": "rimraf golden",
     "start": "node index.js",
     "pretest": "rimraf temp",
-    "test": "mocha",
+    "test": "mocha --timeout 60000",
     "lint": "eslint --quiet index.js test.js"
   },
   "dependencies": {
